syntax = "proto3";
package catalog.allow_list;

import "google/protobuf/timestamp.proto";

/* A white list of Open Definitions for a client.
 * Next Id: 5 */
 message AllowList {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string client_id = 4;
}
