syntax = "proto3";
package join;

import "catalog/allow-list/allow-list.proto";
import "catalog/open-definition/open-definition.proto";

/* Next Id: 3 */
message JoinAllowListOpenDefinitionRequest {
  string allow_list_id = 1;
  string open_definition_id = 2;
}
/* Next Id: 3 */
message JoinAllowListOpenDefinitionResponse {
  catalog.allow_list.AllowList allow_list = 1;
  catalog.open_definition.OpenDefinition open_definition = 2;
}
